@@ -412,29 +412,25 @@ sub _process_prog_pod {
     }
 
     # Extract the actual interface...
-    my %requireds;
-    my @requireds_order;
+    my @requireds_arr;
     while ( ( $required || q{} ) =~ m{ $EUCLID_ARG }gxms ) {
-        push @requireds_order, $1;
-        $requireds{$1} = $2;
+        push @requireds_arr, [$1, $2];
     }
-    my %options;
-    my @options_order;
+    my @options_arr;
     while ( ( $options  || q{} ) =~ m{ $EUCLID_ARG }gxms ) {
-        push @options_order, $1;
-        $options{$1} = $2;
+        push @options_arr, [$1, $2];
     }
 
     # Convert each arg entry to a hash...
-    my $seq_num = 0;
     my %seen;
-    for my $pair( [\%requireds, \%requireds_hash],
-                  [\%options, \%options_hash]      ) {
+    for my $pair( [\@requireds_arr, \%requireds_hash],
+                  [\@options_arr  , \%options_hash  ]  ) {
         my ($spec, $storage) = @$pair;
-        while ( my ($name, $spec) = each %$spec ) {
+        for my $seq (0 .. scalar @$spec - 1) {
+            my ($name, $spec) = @{$spec->[$seq]};
             my @variants = _get_variants($name);
             $$storage{$name} = {
-                seq      => $seq_num++,
+                seq      => $seq,
                 src      => $spec,
                 name     => $name,
                 variants => \@variants,
@@ -455,9 +451,7 @@ sub _process_prog_pod {
     _process_euclid_specs( values(%requireds_hash), values(%options_hash) );
 
     # Build one-line representation of interface...
-    my $arg_summary = join ' ',
-      sort { $requireds_hash{$a}{seq} <=> $requireds_hash{$b}{seq} }
-      keys %requireds_hash;
+    my $arg_summary = join ' ', (map { $_->[0] } @requireds_arr);
     1 while $arg_summary =~ s/\[ [^][]* \]//gxms;
 
     if ($opt_name) {
@@ -470,8 +464,8 @@ sub _process_prog_pod {
             {$1$SCRIPT_NAME $arg_summary $2}xms;
 
     # Insert default values (if any) in the program's documentation
-    $required = _insert_default_values(\%requireds, \%requireds_hash, \@requireds_order);
-    $options  = _insert_default_values(\%options  , \%options_hash  , \@options_order  );
+    $required = _insert_default_values(\%requireds_hash, \@requireds_arr);
+    $options  = _insert_default_values(\%options_hash  , \@options_arr  );
 
     $man =~ s{ ($HEAD_START $REQUIRED \s*) .*? (\s*) $HEAD_END } {$1$required$2}xms;
     $man =~ s{ ($HEAD_START $OPTIONS  \s*) .*? (\s*) $HEAD_END } {$1$options$2}xms;
@@ -482,7 +476,6 @@ sub _process_prog_pod {
     $usage .= "       $SCRIPT_NAME --man\n";
     $usage .= "       $SCRIPT_NAME --usage\n";
     $usage .= "       $SCRIPT_NAME --version\n";
-
 
     # Help message
     $help  = "=head1 \L\uUsage:\E\n\n$usage\n";
@@ -503,10 +496,8 @@ sub _process_prog_pod {
     # Build matcher...
     my @arg_list = ( values(%requireds_hash), values(%options_hash) );
     $matcher = join '|', map { $_->{matcher} }
-      sort( { $b->{name} cmp $a->{name} } grep { $_->{name} =~ /^[^<]/ }
-          @arg_list ),
-      sort( { $a->{seq} <=> $b->{seq} } grep { $_->{name} =~ /^[<]/ }
-          @arg_list );
+      sort( { $b->{name} cmp $a->{name} } grep { $_->{name} =~ /^[^<]/ } @arg_list ),
+      sort( { $a->{seq}  <=> $b->{seq}  } grep { $_->{name} =~ /^[<]/  } @arg_list );
 
     $matcher .= '|(?> (.+)) (?{ push @errors, $^N }) (?!)';
 
@@ -1233,10 +1224,10 @@ sub _get_pod {
 
 
 sub _insert_default_values {
-    my ($pod_items, $args, $order) = @_;
+    my ($args, $order) = @_;
     my $pod_string = '';
-    for my $item_name (@$order) {
-        my $item_spec = $$pod_items{$item_name};
+    for my $item (@$order) {
+        my ($item_name, $item_spec) = @$item;
         $item_spec =~ s/=for(.*)//ms;
         $pod_string .= "=item $item_name\n\n";
         # Get list of variable for this argument
