@@ -29,7 +29,7 @@ This document refers to std_arguments.t version 1.9.4
 
 \=head1 USAGE
 
-    std_arguments.t -o= <out_file> -i <file> [options] 
+    std_arguments.t -i <file> -o= <out_file> [options] 
 
 \=head1 REQUIRED ARGUMENTS
 
@@ -119,7 +119,7 @@ my $podfile = "# This file was automatically generated by Getopt::Euclid. Do not
 my $help = <<EOS;
 \=head1 Usage:
 
-       std_arguments.t -o= <out_file> -i <file> [options]
+       std_arguments.t -i <file> -o= <out_file> [options]
        std_arguments.t --help
        std_arguments.t --man
        std_arguments.t --usage
@@ -193,7 +193,7 @@ EOS
 
 my $usage = <<EOS;
 Usage:
-       std_arguments.t -o= <out_file> -i <file> [options]
+       std_arguments.t -i <file> -o= <out_file> [options]
        std_arguments.t --help
        std_arguments.t --man
        std_arguments.t --usage
